syntax = "proto3";

package shop;

option java_multiple_files = true;
option java_package = "com.shop";
option java_outer_classname = "ProductProto";


service ProductService{
  rpc saveCategory(SaveCategoryRequest) returns (SaveResponse){}
  rpc saveProduct(SaveProductRequest) returns (SaveResponse){}
}


message SaveResponse {
}

message SaveCategoryRequest {
  bytes category=1;
}

message SaveProductRequest {
  bytes product = 1;
}
